# stated

./: Cargo.toml  README.md
examples/: Cargo.toml  read_me.rs  read_me_pretty.rs
stated/: Cargo.toml
stated-macros/: Cargo.toml
stated-macros/src/: lib.rs
stated-macros/src/expand/: mod.rs  stated.rs  stated_internal.rs
stated-macros/src/extensions/: generics.rs  item.rs  meta.rs  mod.rs  punctuated.rs  ty.rs
stated-macros/src/exts/: generics.rs  mod.rs  punctuated.rs
stated-macros/src/utilities/: designated.rs  documentation.rs  mod.rs  stateset.rs  visit.rs
stated-macros/src/utils/: designated.rs  mod.rs  properties.rs  stateset.rs
stated/src/: lib.rs
stated/src/examples/: read_me.rs
stated/src/guide/: expansion.rs  limitations.rs  mod.rs  tutorial.rs
stated/src/guide/documentation/: mod.rs
stated/src/guide/documentation/examples/: attributes.rs  mod.rs  read_me.rs
stated/src/guide/examples/: description.rs  mod.rs  read_me.rs  read_me_pretty.rs  ugly.rs
stated/src/guide/tutorial/: mod.rs  states.rs  syntax.rs
test-suite/: Cargo.toml
test-suite/tests/: compile.rs  tests.rs
test-suite/tests/fail/states/: method_assert.rs  method_assert.stderr  method_reject.rs  method_reject.stderr
test-suite/tests/pass/states/: constructor.rs  constructor_assign.rs  constructor_preset.rs  constructor_preset_assign.rs  constructor_preset_delete.rs  method.rs  method_assert.rs  method_assign.rs  method_delete.rs  method_reject.rs
test-suite/tests/ui/designated/: duplicate_attribute.rs  duplicate_attribute.stderr  missing_argument.stderr  missing_attribute.stderr  missing_designated_argument.rs  missing_designated_argument.stderr  missing_designated_argument_no_arguments.rs  missing_designated_parameter.stderr  (+13 more)
(+111 files in other folders)
